resolve conflict during merging branches

--- a/css/modules/dashboard.css
+++ b/css/modules/dashboard.css
@@ -142,6 +142,7 @@
 
 #virtualclassCont.congrea .currentNav .mainpreview {
   box-shadow: 0 0 6px rgb(96, 96, 97);
+  border: unset;
   pointer-events: none;
   border: unset;
 }
